<resources>
    <string name="app_name">TMark</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="site">Site :  </string>
    <string name="route">Route :  </string>
    <string name="employee_name">Employee Name :  </string>
    <string name="employee_id">Identification Id :  </string>
    <string name="employee_code">Unique Code :  </string>
    <string name="checkin_time">CheckIn Time :  </string>
    <string name="checkout_time">CheckOut Time :  </string>
    <string name="checkin_address">CheckIn Address :  </string>
    <string name="checkout_address">CheckOut Address :  </string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="round_number">Round Number :</string>
    <string name="address">Address :</string>
    <string name="checkpoints">Checkpoint :</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="ok">OK</string>
    <string name="checkpoint">Checkpoints</string>
    <string name="home">Home</string>
    <string name="home_caps">HOME</string>
    <string name="docs">DOCUMENTS</string>
    <string name="profile">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification_history">Verification History</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="scan_history">Scan History</string>
    <string name="reset_password_statement">To reset your password please contact to <i><u><b>Administrator</b></u></i> at below given number with your <i><u><b>Employee Id</b></u></i> or registered <i><u><b>Mobile Number</b></u></i></string>
    <string name="admin_number">Administrator Contact Number :</string>
    <string name="admin_name">Administrator Name :</string>
    <string name="no_scanned_history_found_on_this_selected_date">No Scanned History found on this selected date</string>
    <string name="title_activity_maps">Map</string>
    <string name="checkpoint_name">Checkpoint Name : </string>
    <string name="date_amp_time">Date &amp; time :</string>
    <string name="text_check_network">No Internet Connection Found.Please Check Your Internet Connection</string>
    <string name="settings">settings</string>
    <string name="permission_denied_explanation">User Denied Permission</string>
    <string name="permission_rationale">Please grant the permission to detect your location</string>
    <string name="search">Search</string>
    <string name="philosopher_bold">Philosopher-Bold.ttf</string>
    <string name="alarm_for">Alarm for</string>
    <string name="error_cannot_open">Can\'t open camera</string>
    <string name="error_cannot_write">can\'t write the image</string>
    <string name="error_cannot_get_permission">Permission not granted to open camera</string>
    <string name="error_not_having_camera">No Front camera present</string>
    <string name="start_address">Start Address:</string>
    <string name="end_address">End Address :</string>
    <string name="guard_checkin">Guard CheckIn</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled</string>
    <string name="test_email" translatable="false">techsaltsolutions@gmail.com</string>
    <string name="test_password" translatable="false">track@123</string>
    <string name="firebase_path" translatable="false">tmark</string>
    <string name="transport_id" translatable="false">909827794519</string>
    <string name="checkin_successfull"><u>Checkin Successful</u></string>
    <string name="name">Name :</string>
    <string name="id">Id :</string>
    <string name="intro_image">intro_image</string>
    <string name="message">Message :</string>
    <string name="comment">Comment :</string>
    <string name="posted_at">Posted At :</string>
    <string name="checkin_history">Checkin History</string>
    <string name="show_docs">View Documents</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="history">History</string>
    <string name="selfie_based_attendance">Selfie Based Attendance</string>
    <string name="unlike_the_traditional">Unlike the traditional ways of marking attendance <b>TMARK</b> gives a new approach to mark your daily attendance with just one click. Start your workday with a smile to mark your presence.</string>
    <string name="communication">Communication</string>
    <string name="security">Security</string>
    <string name="security_personals_only"><u>Security Personals Only</u></string>
    <string name="route_assigned_history">Route Assigned History</string>
    <string name="please_select_date">Please select date</string>
    <string name="check_in">Check In</string>
    <string name="image">image</string>
    <string name="all_guard_list">All Guard List</string>
    <string name="route_start_address">Route Start Address</string>
    <string name="route_end_address">Route End Address</string>
    <string name="please_maintain_the_minimum_25_30_meters_distance_between_two_checkpoints">Please maintain the minimum (25-30 Meters) distance between two checkpoints.</string>
    <string name="order_no">Order No.</string>
    <string name="check_point_name">Check Point Name</string>
    <string name="assigned_n_to_me">Assigned \n(to me)</string>
    <string name="organization_name">Organization Name :</string>
    <string name="organization_name_one">Organization Name</string>
    <string name="employee_type">Type :</string>
    <string name="checkin_message">Checkin Message</string>
    <string name="your_comment_here">Your comment here</string>
    <string name="post_now">Post Now</string>
    <string name="site_address">Site Address</string>
    <string name="current_trip">Current Trip</string>
    <string name="_0">0</string>
    <string name="verified">Verified</string>
    <string name="i_m_guarding_the_route">I m guarding the route</string>
    <string name="i_m_not_sleeping">I m not sleeping</string>
    <string name="skip_introduction">Skip Introduction</string>
    <string name="proceed">Proceed</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="all_assigned_pending_route">All Assigned Route</string>
    <string name="assigned_route_to_scan">Assigned Route -(To Scan)</string>
    <string name="organization_email">Organization Email</string>
    <string name="site_code">Site Code</string>
    <string name="route_code">Route Code</string>
    <string name="employee_dob">Employee DOB :</string>
    <string name="employee_doj">Employee DOJ :</string>
    <string name="employee_mobile_number">Employee Mobile Number :</string>
    <string name="employee_nationality">Employee Nationality :</string>
    <string name="employee_address">Employee Address :</string>
    <string name="checkpoint_scanned_history">Checkpoint Scanned History</string>
    <string name="attendance_at_fingertip">Attendance At Fingertip</string>
    <string name="powered_by_trackkers_com">Powered by Trackkers.com</string>
    <string name="tmark">TMARK</string>
    <string name="done">Done</string>
    <string name="processing">Processing</string>
    <string name="e_register">E - Register</string>
    <string name="field_officer">Field Officer</string>
    <string name="guard">Guard</string>
    <string name="post_all_issues">Post all issues, feedback and reviews with your comment along with the images.</string>
    <string name="meet_the_new_approach">Guards mark your presence from your post and scan QR enable checkpoints with ease.</string>
    <string name="updating_your_location">Post Now</string>
    <string name="updating_your_locations">Guard is On Duty</string>
    <string name="my_bk_service">My Background Service</string>
    <string name="my_notification_id">My Notification Id</string>
    <string name="package_name">com.trackkers.tmark</string>
    <string name="guard_duty">Guard is on duty</string>
    <string name="checkin_time_">Check In Time :</string>
    <string name="checkout">Check Out</string>
    <string name="checkin">Check In</string>
    <string name="unable_to_fetch">Unable to fetch the location</string>
    <string name="sorry_cant_use">Sorry!!!, you can\'t use this app without granting permission</string>
    <string name="enable_gps">To use the app you must enable the GPS</string>
    <string name="success">success</string>
    <string name="checkin_sucessfull">Check In Successful</string>
    <string name="please_select_guard">Please select guard</string>
    <string name="select_guard">Select Guard</string>
    <string name="enter_company_email">Please enter your Company Email</string>
    <string name="enter_site_code">Please enter site code</string>
    <string name="enter_route_code">Please enter route code</string>
    <string name="assigned_route_history">Assigned Route History</string>
    <string name="wrong_qr">Wrong Qr Code Scanned</string>
    <string name="chk_verified">Checkpoint Verified</string>
    <string name="you_r_here">You are Here</string>
    <string name="logout_sucessfull">Logout Successful</string>
    <string name="mark_your_attendance">Mark Your Attendance</string>
    <string name="write_comment">Please write comment or tag image.</string>
    <string name="scan">Scan</string>
    <string name="noscan">NoScan</string>
    <string name="checkout_sucessfull">Checkout Successful</string>
    <string name="camera_closed">Camera Closed</string>
    <string name="no_camera_detected">No camera detected!</string>
    <string name="scanned_history">Scanned History</string>
    <string name="posted_sucessfully">Posted successfully !!!</string>
    <string name="enter_company_name">Please enter your Company Name</string>
    <string name="registered_mobile_number">Please enter your registered Mobile Number</string>
    <string name="enter_your_password">Please enter your Password</string>
    <string name="medical">Medical</string>
    <string name="uanc">UANC</string>
    <string name="esic">ESIC</string>
    <string name="driving">Driving Licence</string>
    <string name="select_route">Please Select A Route</string>
    <string name="bad_request">Bad Request!! Please retry.</string>
    <string name="network_busy">Network Busy.</string>
    <string name="resource_not_found">Resource Not Found.</string>
    <string name="something_went_wrong">Something went heywire!! please retry.</string>
    <string name="unable_to_find">Unable to find market app</string>
    <string name="share_text">TMark\n\nLet me recommend you this app for employee attendance and realtime tracking system\n\n</string>
    <string name="login_session_expired">Your Login session expired please login again</string>
    <string name="select_guard_to_assign_to_route">Select guard to assign to route</string>
    <string name="assign_guard">Assign Guard</string>
    <string name="guard_name">Guard Name</string>
    <string name="unassign_guard">Unassign Guard</string>
    <string name="add_new_guard">Add New Guard</string>
    <string name="select_guard_type">Select guard type</string>
    <string name="guards_operational">Guards (Operational)</string>
    <string name="guard_information">Guard Information</string>
    <string name="guard_mobile_number">Guard Mobile Number</string>
    <string name="guard_address">Guard Address</string>
    <string name="enable_tracking">Enable Tracking</string>
    <string name="live_tracking">Live Tracking</string>
</resources>