<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_scan_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/scan_history" />

        <item
            android:id="@+id/nav_resetpassword"
            android:icon="@drawable/ic_rounded_corner_black_24dp"
            android:title="@string/reset_password" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
