<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.trackkers.tmark.customviews.MyTextview
        android:id="@+id/tv_post_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/posted_at"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


    <com.trackkers.tmark.customviews.MyTextview
        android:id="@+id/tv_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/comment"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/iv_post_image"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginBottom="@dimen/dp_10"
        android:visibility="gone"
        android:layout_gravity="center"
        android:contentDescription="@string/image"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"/>


</LinearLayout>