<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/iv_images"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/intro_image"
        android:layout_weight=".6"
        android:src="@drawable/selfie_final"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".4">

        <com.trackkers.tmark.customviews.MyTextview
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/selfie_based_attendance"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/dp_15" />

        <com.trackkers.tmark.customviews.MyTextview
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlike_the_traditional"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"/>

    </LinearLayout>

</LinearLayout>